trunk/timeware/src/objects/Accrual_Earnings__c.object
<CustomObject>
    <description>Master-Detail relationship with Accrual Policy (Master) object. Items detail threshold rules.</description>
    <fields>
        <fullName>Accrual_Policy__c</fullName>
        <label>Accrual Policy</label>
        <referenceTo>Accrual_Policy__c</referenceTo>
        <relationshipLabel>Accrual Earnings</relationshipLabel>
        <relationshipName>R00N70000002IOUGEA4</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Months_Service__c</fullName>
        <label>End Months Service</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Earned__c</fullName>
        <label>Hours Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Months_Service__c</fullName>
        <label>Start Months Service</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Accrual Earnings</label>
    <nameField>
        <displayFormat>AE-{0000}</displayFormat>
        <label>Accrual Earnings ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accrual Earnings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>